# Plate

./: .gitignore  .gitleaks.toml  ARCHITECTURE.md  CLAUDE.md  README.md  ROADMAP.md  docker-compose.yml
server/: .dockerignore  .env.bak-20260711_222515  .env.bak-20260711_230705  .env.example  Dockerfile  README.md  alembic.ini  docker-entrypoint.sh  pyproject.toml  run.sh
server/alembic/: env.py
server/alembic/versions/: 0001_initial_tables.py  0002_recipes_and_quickadd.py  0003_body_metrics.py  0004_food_log_source_ref.py  0005_normalize_goal_rate_sign.py  0006_restaurants.py  0007_food_portions_and_search.py
server/app/: config.py  database.py  limiter.py  limits.py  main.py  security.py
server/app/foods/: __init__.py  base.py  normalize.py  off.py  ranking.py  usda.py
server/app/models/: __init__.py  body_metric.py  daily_target.py  food.py  food_log_entry.py  food_portion.py  recipe.py  recipe_item.py  restaurant.py  restaurant_component.py  search_query.py  user.py  user_goal.py
server/app/nutrition/: __init__.py  adaptive.py  constants.py  portions.py  targets.py  totals.py  trend.py  units.py
server/app/recipes_ext/: base.py  spoonacular.py
server/app/routers/: ai.py  auth.py  checkin.py  cross_app.py  export.py  foods.py  goals.py  log.py  metrics.py  recipes.py  restaurants.py  suite_auth.py  users.py
server/app/schemas/: ai.py  auth.py  cross_app.py  food.py  goal.py  log.py  metric.py  photo.py  recipe.py  restaurant.py  user.py  voice.py
server/app/services/: adaptive_service.py  auth_service.py  checkin_service.py  cross_app_food_service.py  cross_app_token.py  export_service.py  food_service.py  (+11 more)
server/scripts/: import_usda_bulk.py
server/tests/: conftest.py  test_adaptive.py  test_ai.py  test_auth.py  test_checkin.py  test_cross_app_foods.py  test_cross_app_plan_remaining.py  test_cross_app_summary.py  test_db_error_handling.py  test_export.py  test_food_portions.py  test_food_ranking.py  test_foods.py  test_goals.py  test_log.py  test_log_batch.py  test_menu_parse.py  test_metrics.py  test_nutrition.py  test_photo.py  test_quick_add.py  test_quick_log.py  test_recipe_discovery.py  test_recipe_export.py  test_recipes.py  test_repository.py  test_restaurant_log.py  test_restaurants.py  test_search_ranking.py  test_spotter_awareness.py  test_streak.py  test_suite_auth.py  test_summary.py  test_targets.py  test_trend.py  test_units.py  test_user_settings.py  test_voice.py
(+198 files in other folders)
