[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "plate-server"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.29.0",
    "sqlalchemy[asyncio]==2.0.30",
    "alembic==1.13.1",
    "asyncpg==0.29.0",
    "pydantic[email]==2.7.1",
    "pydantic-settings==2.2.1",
    "python-jose[cryptography]==3.3.0",
    "passlib==1.7.4",
    "bcrypt==4.0.1",
    "httpx==0.27.0",
    "python-multipart==0.0.9",
    "greenlet==3.0.3",
    "slowapi==0.1.9",
    "email-validator==2.1.1",
]

[project.optional-dependencies]
dev = [
    "pytest==8.2.0",
    "pytest-asyncio==0.23.6",
    "httpx==0.27.0",
    "ruff==0.4.4",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
